--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div class="board" id="board">
       <div class="cell x" data-cell></div>
       <div class="cell circle" data-cell></div>
-      <div class="cell x" data-cell></div>
       <div class="cell" data-cell></div>
-      <div class="cell x" data-cell></div>
       <div class="cell" data-cell></div>
-      <div class="cell x" data-cell></div>
       <div class="cell" data-cell></div>
-      <div class="cell x" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
+      <div class="cell" data-cell></div>
     </div>
     <div class="winning-message">
       <div class="" data-winning-message-text></div>
