--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="cell" data-cell></div>
       <div class="cell" data-cell></div>
     </div>
-    <div class="winning-message">
+    <div class="winning-message" id="winning-message">
       <div class="" data-winning-message-text></div>
       <button id="restart-button">Restart</button>
     </div>
